integration/tests/error_file_unauthorized.hurl
POST http://localhost:8000/post-file
file,/secret.txt;

HTTP/1.0 200
